# auth_CRUD_actix_web

./: Cargo.toml
migration/src/: m20260307_175048_create_users.rs
src/: main.rs
src/api/: mod.rs  routes.rs
src/api/auth/: handlers.rs
src/api/home/: handler.rs  routes.rs
src/api/users/: handlers.rs
src/shared/middleware/: auth.rs
src/shared/utils/: auth_utils.rs  mod.rs
