[package]
name = "actix_web_template_microservice"
version = "0.1.0"
edition = "2024"
description = ""
license = "MIT OR Apache-2.0"
repository = ""
authors = ["jvcByte: jvc8463@gmail.com"]

[dependencies]
actix-web = "4.13.0"
argon2 = "0.5.3"
chrono = "0.4.44"

entity = {path = "entity"}
futures = "0.3.32"
jsonwebtoken = "10.3.0"
log = "0.4.29"
migration = {path = "migration"}
sea-orm = "1.1.19"
serde = "1.0.228"
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4"] }
